# focus-flow

./: .gitignore  LICENSE  MAC_APP_SETUP.md  MAC_WIDGET_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_0.1.11.md  RELEASE_NOTES_0.1.12.md  RELEASE_NOTES_0.1.13.md  RELEASE_NOTES_0.1.14.md  RELEASE_NOTES_0.1.15.md  RELEASE_NOTES_0.1.3.md  RELEASE_NOTES_0.1.4.md  RELEASE_NOTES_0.1.5.md  RELEASE_NOTES_0.1.6.md  RELEASE_NOTES_0.1.7.md  RELEASE_NOTES_0.1.8.md  RELEASE_NOTES_0.1.9.md  RELEASE_PLAN.md  next.config.ts  package-lock.json  package.json
.github/workflows/: build.yml
.kiro/specs/calendar-view/: .config.kiro  design.md  requirements.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: error-boundary.tsx
src/components/focus-flow/: always-on-top-toggle.tsx  bouncing-quote.tsx  calendar-view.tsx  corner-mini-window.tsx  edit-item-modal.tsx  floating-pomodoro.tsx  focus-session.tsx  item-card.tsx  locale-toggle.tsx  management-modals.tsx  pixel-art.tsx  quick-capture.tsx  task-views.tsx  today-mainline.tsx  toolbar-menu.tsx  ui.tsx  workbench.tsx
src/contexts/: focus-flow-context.tsx  locale-context.tsx
src/hooks/: use-data-actions.ts  use-items.ts  use-pomodoro.ts
src/lib/: focus-flow-model.ts  i18n.ts  notifications.ts  persistence.ts  window-controls.ts
tests/: focus-flow-insights.test.mjs
