[package]
name = "focus-flow"
version = "0.1.8"
description = "Focus Flow desktop app"
authors = ["Ls"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
